<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerform"
        android:textSize="26sp"
        android:layout_gravity="center"

        />

<LinearLayout
    android:id="@+id/layout_firstname"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    >
    <TextView
        android:id="@+id/txt_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="20sp"

        />
    <EditText
        android:id="@+id/edt_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_name"
        android:textSize="26sp"
        android:layout_marginStart="10dp"
        tools:ignore="Autofill,TextFields" />

</LinearLayout>


    <LinearLayout
        android:id="@+id/layout_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/txt_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="20sp"

            />
        <EditText
            android:id="@+id/edt_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name"
            android:textSize="26sp"
            android:layout_marginStart="10dp"
            tools:ignore="Autofill,TextFields" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textSize="26sp"
            android:layout_marginStart="1dp"
            android:inputType="phone"
            tools:ignore="Autofill" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="20sp"
                android:checked="false"
                android:layout_gravity="center_horizontal"
                />
            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="20sp"
                android:checked="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                />


        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btn_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_alreadyRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_register_login"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/design_default_color_on_secondary"
            />



    </LinearLayout>
</LinearLayout>

